--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "glob": "^10.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "nodemailer": "^6.9.13",
+    "rimraf": "^5.0.7",
     "stripe": "^15.9.0",
     "validator": "^13.12.0"
   }
